translate resource file

--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -1,1 +1,155 @@
-
+answer.noaswersfound = No Answers Found
+answer.question = Question
+cost.add = Add Cost
+cost.amount = Amount
+cost.costs = Costs
+cost.delete = Remove Cost
+cost.description = Cost Description
+cost.edit = Edit Cost
+cost.nocostsfound = No Costs Found
+error.costNotFound = Cost Not Found
+error.defaultError = An Error Has Occurred, Please Contact The Webmaster
+error.error= Yeah,.. This is not supposed to happen
+error.internalsystemerror= Internal System Error. An expert is on his way to resolve the problem
+error.messageNotFound = Message Not Found
+error.pagenotfound = Page Not Found, Double Check Url
+error.requestmethoderror = Request Method Error, Please Contact The Webmaster
+error.sorry = We're Sorry, but the following error occured:
+error.stopNotFound = Stop Not Found
+error.tripInstanceNotFound = Trip Not Found
+error.tripNotFound = Trip Template Not Found
+error.userNotAuthorizedToAddAnswers =  You're Not Authorized To Add Answers
+error.userNotAuthorizedToAddMessages = You're Not Authorized To Add Messages
+error.userNotAuthorizedToAddRequirement = You're Not Authorized To Add Requirements
+error.userNotAuthorizedToAddStop = You're Not Authorized To Add Stops
+error.userNotAuthorizedToEditStop = You're Not Authorized To Edit This Stop
+error.userNotAuthorizedToEditTrip = You're Not Authorized To Edit This Trip
+home.contentTitle = My Trip Advisor
+home.organizeTrip = Organize Trip
+home.participateOnTrip = Join Trip
+invite.bymail = Invite Friends By E-mail
+invite.doinvite = Invite
+invite.invitefriendsfb = Invite Friends By Facebook
+invite.personalmessage = Personal Message
+invite.receipients = Recipients (separated by comma)
+login.loading = Loading
+login.loginfacebook = Login with Facebook
+menu.home = Home
+menu.logout = Log Out
+menu.organisetrips = Organize Trips
+menu.profile = Profile
+menu.trips = Trips
+message.add = Add Message
+message.content = Write message here
+message.date = Message Date
+message.delete= Remove Message
+message.messages = Messages
+message.nomessagesfound = No Message Found
+requirement.allusers = All Users
+requirement.amount = Amount Of Requirements
+requirement.create = Create Requirement
+requirement.description = Requirement Description
+requirement.name = Requirement Name
+requirement.norequirementsfound = No Requirements Found
+requirement.requirements = Requirements
+requirementinstance.assignresponsible = Assign Requirement To User
+requirementinstance.responsible = Responsible
+stop.add = Add Stop
+stop.augmentedreality = Augmented Reality
+stop.informative = Informative
+stop.interactive = Interactive
+stop.latitude = Latitude
+stop.longitude = Longitude
+stop.new = Add Stop
+stop.normal = Normal
+stop.nostopsfound = No Stops Found
+stop.order = Order
+stop.radius = Radius
+stop.type = Type
+stop.visibility = Visibility
+stops.editstop = Edit Stop
+stops.latitude = Latitude
+stops.longitude = Longitude
+stops.question = Question
+stops.radius = Radius
+stops.visibility = Visibility.
+text.add = Add Text
+text.amount = Amount
+text.cancel = Cancel
+text.createaccount = Create Account
+text.dashboard = My Dashboard
+text.date = Datum
+text.dateofbirth = Date Of Birth
+text.dateofbirthedit = Date Of Birth (dd-mm-jjjj)
+text.delete = Delete
+text.description = Description
+text.detail = Detail
+text.edit = Edit
+text.email = E-mail
+text.finishediting = Finish Editing
+text.internalsystemerror= Internal System Error. An expert is on his way to resolve the problem
+text.invaliduser = User Not Found.
+text.login = Login
+text.logout = Log Out
+text.mydata = My Personal Details
+text.myprofile = My Profile
+text.mytrips = My Trips
+text.name = Name
+text.password = Password
+text.profilepicture = Profile Picture Link
+text.register = Register
+text.rending = Rendering
+text.repeatpassword = Repeat Password
+text.resetpassword = Reset Password
+text.resetpasswordlink = Reset Password Link
+text.resetpasswordtimeerror = Password reset string expired. please request a new one.
+text.resetstringnotfound = Invalid password reset string.
+text.save = Save
+text.stops = Stops
+text.time = Time
+text.title = Title
+text.username = Username
+text.viewprofile = View Profile
+trip.available = Public
+trip.availabletooltip = Invitation Only.
+trip.create = Create Trip
+trip.creator = Trip Creator
+trip.description = Trip Description
+trip.descriptiontooltip = Trip short description
+trip.edit = Edit Trip
+trip.name = Trip Name
+trip.noowntripsfound = No Own Trip Templates Found
+trip.notripsfound = No Trips Found
+trip.owntrips = Own Trip Templates
+trip.publictrips = Public Trip Templates
+trip.repeatable = Repeatable
+trip.repeatabletooltip = Is the trip repeatable?
+trip.titletooltip = Trip Name
+trip.trip= Trip
+trip.trips = Trips
+trip.viewinformation = View Trip Information
+tripinstance.create = Create Trip
+tripinstance.daily = Daily
+tripinstance.date = Trip Date
+tripinstance.datetooltip = When will the trip be executed
+tripinstance.dateuntil = Repeat until
+tripinstance.dateuntiltooltip = Until when will te trip be repeated?
+tripinstance.edit Edit Trip
+tripinstance.endtime = End
+tripinstance.endtimetooltip = When will the trip be over?
+tripinstance.join = Join
+tripinstance.noparticipants = No Participants
+tripinstance.notripinstancesfound = No Trips Found
+tripinstance.numberofparticipants = Number Of Participants
+tripinstance.organiser = Organizer
+tripinstance.owntripinstances = Own Trips
+tripinstance.participants = Participants
+tripinstance.participated = Joined Trips
+tripinstance.pasttrips = Passed Trips
+tripinstance.plannedtrips = Planned Trips
+tripinstance.publictripinstances = Public Trips
+tripinstance.starttime = Start
+tripinstance.starttimetooltip = When does the trip start?
+tripinstance.tripinstances = Planned Trips
+tripinstance.tripinstancesofthistrip = Planned Trips Using This Trip Template
+tripinstance.weekly = Weekly
