Fanfreluche est une poupé

--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -98,7 +98,7 @@ text.name = Name
 text.password = Password
 text.profilepicture = Profile Picture Link
 text.register = Register
-text.rending = Rendering
+text.rendering = Rendering
 text.repeatpassword = Repeat Password
 text.resetpassword = Reset Password
 text.resetpasswordlink = Reset Password Link
@@ -120,6 +120,7 @@ trip.edit = Edit Trip
 trip.name = Trip Name
 trip.noowntripsfound = No Own Trip Templates Found
 trip.notripsfound = No Trips Found
+trip.nopublictripsfound = No public trips found
 trip.owntrips = Own Trip Templates
 trip.publictrips = Public Trip Templates
 trip.repeatable = Repeatable
@@ -141,6 +142,8 @@ tripinstance.join = Join
 tripinstance.noparticipants = No Participants
 tripinstance.notripinstancesfound = No Trips Found
 tripinstance.numberofparticipants = Number Of Participants
+tripinstance.noowntripinstancesfound = You did not planned any trips yet
+tripinstance.nopublictripinstancesfound = There are no public trip available
 tripinstance.organiser = Organizer
 tripinstance.owntripinstances = Own Trips
 tripinstance.participants = Participants
