--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -1,10 +1,3 @@
-#text.editstop = Stopplaats aanpassen
-#text.enddate = Enddate
-#text.from = Van
-#text.startdate = Startdatum
-#text.to = Tot
-#trip.add = Voeg een nieuwe trip toe
-#tripinstance.tripinstance =
 answer.noaswersfound = Er zijn nog geen antwoorden voor de stopvraag
 answer.question = Vraagstelling
 cost.add = Kost toevoegen
@@ -105,7 +98,7 @@ text.name = Naam
 text.password = Wachtwoord
 text.profilepicture = Link naar profielfoto
 text.register = Registreer
-text.rending = Weergave
+text.rendering = Weergave
 text.repeatpassword = Wachtwoord herhalen
 text.resetpassword = Reset paswoord
 text.resetpasswordlink= Wachtwoord vergeten?
@@ -127,6 +120,7 @@ trip.edit = Trip aanpassen
 trip.name = Naam van de trip
 trip.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 trip.notripsfound = Geen trips gevonden
+trip.nopublictripsfound = Geen publieke trips gevonden
 trip.owntrips = Eigen templates
 trip.publictrips = Publieke templates
 trip.repeatable = Herhaalbaar
@@ -147,6 +141,8 @@ tripinstance.endtimetooltip = Wanneer eindigt de trip?
 tripinstance.join = Deelnemen
 tripinstance.noparticipants = Geen deelnemers
 tripinstance.notripinstancesfound = De trip heeft nog geen instanties.
+tripinstance.noowntripinstancesfound = Je hebt geen eigen trips gepland
+tripinstance.nopublictripinstancesfound = Er zijn geen publieke trips beschikbaar
 tripinstance.numberofparticipants = Aantal deelnemers
 tripinstance.organiser = Organisator
 tripinstance.owntripinstances = Eigen trips
