--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -96,7 +96,7 @@ text.myprofile = My Profile
 text.mytrips = My Trips
 text.name = Name
 text.password = Password
-text.profilepicture = Profile Picture Link
+text.profilepicture = Upload profile picture
 text.register = Register
 text.rendering = Rendering
 text.repeatpassword = Repeat Password
@@ -122,6 +122,7 @@ trip.noowntripsfound = No Own Trip Templates Found
 trip.notripsfound = No Trips Found
 trip.nopublictripsfound = No public trips found
 trip.owntrips = Own Trip Templates
+trip.planinstance = Plan a trip using this template
 trip.publictrips = Public Trip Templates
 trip.repeatable = Repeatable
 trip.repeatabletooltip = Is the trip repeatable?
