--- a/src/main/resources/text_nl.properties
+++ b/src/main/resources/text_nl.properties
@@ -96,7 +96,7 @@ text.myprofile = Mijn profiel
 text.mytrips = Mijn trips
 text.name = Naam
 text.password = Wachtwoord
-text.profilepicture = Link naar profielfoto
+text.profilepicture = Profielfoto uploaden
 text.register = Registreer
 text.rendering = Weergave
 text.repeatpassword = Wachtwoord herhalen
@@ -122,6 +122,7 @@ trip.noowntripsfound = Je hebt nog geen eigen templates gemaakt
 trip.notripsfound = Geen trips gevonden
 trip.nopublictripsfound = Geen publieke trips gevonden
 trip.owntrips = Eigen templates
+trip.planinstance = Plan een trip van deze template
 trip.publictrips = Publieke templates
 trip.repeatable = Herhaalbaar
 trip.repeatabletooltip = Kan je trip meerdere keren uitgevoerd worden?
